<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_insurance_list"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_50"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_horizontal_largest"
        android:paddingRight="@dimen/margin_horizontal_largest">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/insuranceNum"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_insurance_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_50"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_horizontal_largest"
        android:paddingRight="@dimen/margin_horizontal_largest">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/insuranceName"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_insurance_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_50"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_horizontal_largest"
        android:paddingRight="@dimen/margin_horizontal_largest">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/startTime"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_startTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_50"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_horizontal_largest"
        android:paddingRight="@dimen/margin_horizontal_largest">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/endTime"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_endTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_y_50"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_horizontal_largest"
        android:paddingRight="@dimen/margin_horizontal_largest">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/money"
            android:textSize="@dimen/font_size_normal" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_normal" />
    </LinearLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/layout_x_10"-->
        <!--android:background="@color/me_bg_gray"/>-->


</LinearLayout>